--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 # ----------------------- #
 
 url: http://yoursite.com
-title: Your Awesome Site
-email: your-email@domain.com
-author: Your Name
-description: > # "Write an awesome description for your new site here. 
+title: Air JorDan
+email: chrrkrrhsen@gmail.com
+author: HyeokJun Gil
+description: Try to use Git / Github
   You can edit this line in _config.yml. It will appear in your document 
   head meta (for Google search results) and in your feed.xml site 
   description.
