--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,6 @@ social:
   - title: twitter
     url: https://twitter.com/SBootstrap
   - title: github
-    url: https://github.com/IronSummitMedia/startbootstrap
+    url: https://github.com/mac-hz97
   - title: linkedin
-    url: 
+    url: https://www.instagram.com/khyeokjun2/
