--- a/_config.yml
+++ b/_config.yml
@@ -30,5 +30,5 @@ social:
     url: https://twitter.com/SBootstrap
   - title: github
     url: https://github.com/mac-hz97
-  - title: linkedin
+  - title: instagram
     url: https://www.instagram.com/khyeokjun2/
