--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ permalink: pretty
 # ----------------------- #
 
 social:
-  - title: twitter
-    url: https://twitter.com/SBootstrap
+  - title: facebook
+    url: https://www.facebook.com/profile.php?id=100006563046246
   - title: github
     url: https://github.com/mac-hz97
   - title: instagram
