--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ description: Try to use Git / Github
   You can edit this line in _config.yml. It will appear in your document 
   head meta (for Google search results) and in your feed.xml site 
   description.
-copyright: 'Copyright &copy; 2015 Your Name. All Rights Reserved.'
-credits: 'Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.'
+copyright: 'Copyright &copy; 2021 HyeokJun Gil. All Rights Reserved.'
+credits: 'Credits: This blog is intended for open source assignments.
 
 # ----------------------- #
 #    Jekyll & Plugins     #
